# SolarSystem

./: .gitignore  CMakeLists.txt  Doxyfile  Planet.hpp  README.md  SolarSystem.cpp  SolarSystem.hpp  data_sturctures_project.cpp  main.cpp
.github/workflows/: cpp-ci.yml
include/: Planet.hpp  SolarSystem.hpp
src/: SolarSystem.cpp  main.cpp
tests/: unit_tests.cpp
